# wallFractal

./: build.sh
wallFractal/: CMakeLists.txt  Messages.sh
wallFractal/package/: metadata.json
wallFractal/package/contents/ui/: config.qml  main.qml
wallFractal/plugin/: CMakeLists.txt  qmldir  wallfractalplugin.cpp
wallFractal/plugin/wallfractalplugin_autogen/: deps  moc_predefs.h
wallFractal/plugin/wallfractalplugin_autogen/include/: moc_wallfractalplugin.cpp  moc_wallfractalplugin.cpp.d
wallfractal/: CMakeCache.txt  CMakeLists.txt  Messages.sh  ecm_uninstall.cmake  prefix.sh
wallfractal/package/: metadata.json
wallfractal/package/contents/ui/: main.qml
wallfractal/plugin/: CMakeCache.txt  CMakeLists.txt  wallfractalplugin.cpp  wallfractalplugin.h
